--- a/LetterIdentification.ipynb
+++ b/LetterIdentification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "12cea05f-85f0-4c88-8aa7-0b42f75a5279",
    "metadata": {
     "tags": []
@@ -12,9 +12,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-     
-      "Confidence Score: 73 %\n",
+      "1/1 [==============================] - 1s 642ms/step\n",
+      "Class: C\n",
+      "Confidence Score: 77 %\n",
+      "\n",
+      "1/1 [==============================] - 0s 31ms/step\n",
+      "Class: C\n",
+      "Confidence Score: 62 %\n",
+      "\n",
+      "1/1 [==============================] - 0s 33ms/step\n",
+      "Class: C\n",
+      "Confidence Score: 59 %\n",
+      "\n",
+      "1/1 [==============================] - 0s 34ms/step\n",
+      "Class: C\n",
+      "Confidence Score: 71 %\n",
+      "\n",
+      "1/1 [==============================] - 0s 38ms/step\n",
+      "Class: C\n",
+      "Confidence Score: 69 %\n",
+      "\n",
+      "1/1 [==============================] - 0s 33ms/step\n",
+      "Class: C\n",
+      "Confidence Score: 69 %\n",
+      "\n",
+      "1/1 [==============================] - 0s 37ms/step\n",
+      "Class: C\n",
+      "Confidence Score: 67 %\n",
       "\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'Copy' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 55\u001b[0m\n\u001b[0;32m     53\u001b[0m camera\u001b[38;5;241m.\u001b[39mrelease()\n\u001b[0;32m     54\u001b[0m cv2\u001b[38;5;241m.\u001b[39mdestroyAllWindows()\n\u001b[1;32m---> 55\u001b[0m Copy \n\u001b[0;32m     56\u001b[0m \u001b[38;5;241m200\u001b[39m\n\u001b[0;32m     57\u001b[0m \u001b[38;5;241m0.001\u001b[39m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'Copy' is not defined"
      ]
     }
    ],
@@ -59,9 +95,9 @@
     "\n",
     "    # Print prediction and confidence score\n",
     "    \n",
+    "    \n",
     "    print(\"Class:\", class_name[2:], end=\"\")\n",
     "    print(\"Confidence Score:\", str(np.round(confidence_score * 100))[:-2], \"%\")\n",
-    "\n",
     "    \n",
     "    print(\"\\r\")\n",
     "    # Listen to the keyboard for presses.\n",
@@ -78,6 +114,15 @@
     "0.001"
    ]
   },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a250416f-0812-4257-8374-06cf8011f948",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
